--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "binary-search-trees",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "start": "node main.js"
   },
